Add simple table with network devices
